Recursive tiles (nested GridPanes) Added the abstract class GridItem providing essential tile properties Added SimpleGridItem to show a simple control node (button, slider, etc.) Started adding ComplexGridItem to show more complex nodes (graphs, tables, etc.) Started adding NestedGridItem to show GridItems recursively